# cfgrammar

./: LICENSE  README.md  cfgrammar.cabal  report.md
app/: Main.hs
src/: CFGrammar.hs
