name:                cfgrammar
version:             0.1.0.0
synopsis:            Manipulate context-free grammars: parsing, generation, etc
description:         Please see README.md
homepage:            http://github.com/githubuser/cfgrammar#readme
license:             BSD3
license-file:        LICENSE
author:              Kevin Gibbons
maintainer:          bakkot@gmail.com
copyright:           2016 Kevin Gibbons
category:            Text, Parsing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CFGrammar
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , random
                     , mtl
                     , deepseq
  default-language:    Haskell2010

executable cfgrammar-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , cfgrammar
                     , containers
  default-language:    Haskell2010

test-suite cfgrammar-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cfgrammar
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bakkot/cfgrammar
